--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
+
 </head>
 
 <body>
-
+<script src="//code.tidio.co/qno6m3ctbms32hiqj5ylf57zahyhkzk8.js" async></script>
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
