--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
   <!-- custom js -->
   <script src="js/custom.js"></script>
   <script src="//code.tidio.co/qno6m3ctbms32hiqj5ylf57zahyhkzk8.js" async></script>
-
+<script src="//code.tidio.co/qno6m3ctbms32hiqj5ylf57zahyhkzk8.js" async></script>
 </body>
 
 </html>
