--- a/about.html
+++ b/about.html
@@ -273,7 +273,7 @@
   <script src="js/bootstrap.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
-
+<script src="//code.tidio.co/qno6m3ctbms32hiqj5ylf57zahyhkzk8.js" async></script>
 
 </body>
 
