--- a/product.html
+++ b/product.html
@@ -523,7 +523,7 @@
   <script src="js/bootstrap.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
-
+<script src="//code.tidio.co/qno6m3ctbms32hiqj5ylf57zahyhkzk8.js" async></script>
 
 </body>
 
