--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
   
-
+<script src="//code.tidio.co/qno6m3ctbms32hiqj5ylf57zahyhkzk8.js" async></script>
 
 </head>
 
